--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-scripts": "5.0.1",
     "redux-logger": "^3.0.6",
     "reselect": "^4.1.8",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@testing-library/jest-dom": "^6.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
